name:                isysuclosed
version:             0.4.6
synopsis:            The isysuclosed.com site
-- description:
homepage:            http://isysuclosed.com/
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable isysuclosed
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 0.6 && < 1.3
                     , base >= 4 && < 5
                     , bytestring
                     , blaze-markup >= 0.6 && < 1
                     , directory >= 1 && < 2
                     , friendly-time
                     , http-types >= 0.8 && < 1
                     , lens >= 4 && < 5
                     , lens-aeson
                     , lucid >= 2.8 && < 3
                     , regex-compat
                     , scotty >= 0.9 && < 1
                     , scientific >= 0.3 && < 0.4
                     , text >= 1 && < 2
                     , time >= 1 && < 2
                     , transformers
                     , vector
                     , wai >= 3 && < 4
                     , warp >= 3.1.3 && < 4
                     , wreq >= 0.2 && < 0.6
  -- hs-source-dirs:
  ghc-options:         -O2 -Wall -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010
